[tool.poetry]
name = "game-engine"
version = "0.1.0"
description = "Yathcli game engine"
authors = ["Alexander Hultnér <ahultner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
pydantic = "^1.7.3"
more-itertools = "^8.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
isort = "^5.7.0"
black = "^20.8b1"
autoflake = "^1.4"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
